1. Улучшения Collection API [#292304]