@@ -28,7 +28,7 @@ public class NotifyAccountTest {
 
     @Test
     public void haveDuplicates() {
-        List<Account> accounts = Arrays.asList(
+        List<Account> accounts = List.of(
                 new Account("123", "Petr Arsentev", "eDer3432f"),
                 new Account("142", "Petr Arsentev", "000001"),
                 new Account("155", "John MacTavish", "032451"),
